--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <article class="person">
       <section class="photo">
         <img
+          class="photo__img"
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Mayweather.jpg"
           alt="Floyd Mayweather"
         >
-        <span class="rank">1</span>
+        <span class="photo__rank">1</span>
       </section>
       <section class="details">
         <a class="name">Floyd Mayweather</a>
@@ -28,10 +29,11 @@
     <article class="person">
       <section class="photo">
         <img
+          class="photo__img"
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Messi.jpg"
           alt="Lionel Messi"
         >
-        <span class="rank">2</span>
+        <span class="photo__rank">2</span>
       </section>
       <section class="details">
         <a class="name">Lionel Messi</a>
@@ -45,10 +47,11 @@
     <article class="person">
       <section class="photo">
         <img
+          class="photo__img"
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Ronaldo.jpg"
           alt="Cristiano Ronaldo"
         >
-        <span class="rank">3</span>
+        <span class="photo__rank">3</span>
       </section>
       <section class="details">
         <a class="name">Cristiano Ronaldo</a>
@@ -62,10 +65,11 @@
     <article class="person">
       <section class="photo">
         <img
+          class="photo__img"
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/McGregor.jpg"
           alt="Conor McGregor"
         >
-        <span class="rank">4</span>
+        <span class="photo__rank">4</span>
       </section>
       <section class="details">
         <a class="name">Conor McGregor</a>
@@ -79,10 +83,11 @@
     <article class="person">
       <section class="photo">
         <img
+          class="photo__img"
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Neymar.jpg"
           alt="Neymar"
         >
-        <span class="rank">5</span>
+        <span class="photo__rank">5</span>
       </section>
       <section class="details">
         <a class="name">Neymar</a>
@@ -96,10 +101,11 @@
     <article class="person">
       <section class="photo">
         <img
+          class="photo__img"
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/James.jpg"
           alt="LeBron James"
         >
-        <span class="rank">6</span>
+        <span class="photo__rank">6</span>
       </section>
       <section class="details">
         <a class="name">LeBron James</a>
@@ -113,10 +119,11 @@
     <article class="person">
       <section class="photo">
         <img
+          class="photo__img"
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Federer.jpg"
           alt="Roger Federer"
         >
-        <span class="rank">7</span>
+        <span class="photo__rank">7</span>
       </section>
       <section class="details">
         <a class="name">Roger Federer</a>
@@ -130,10 +137,11 @@
     <article class="person">
       <section class="photo">
         <img
+          class="photo__img"
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Curry.jpg"
           alt="Stephen Curry"
         >
-        <span class="rank">8</span>
+        <span class="photo__rank">8</span>
       </section>
       <section class="details">
         <a class="name">Stephen Curry</a>
@@ -147,10 +155,11 @@
     <article class="person">
       <section class="photo">
         <img
+          class="photo__img"
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Ryan.jpg"
           alt="Matt Ryan"
         >
-        <span class="rank">9</span>
+        <span class="photo__rank">9</span>
       </section>
       <section class="details">
         <a class="name">Matt Ryan</a>
@@ -164,10 +173,11 @@
     <article class="person">
       <section class="photo">
         <img
+          class="photo__img"
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Stafford.jpg"
           alt="Matthew Stafford"
         >
-        <span class="rank">10</span>
+        <span class="photo__rank">10</span>
       </section>
       <section class="details">
         <a class="name">Matthew Stafford</a>
