--- a/index.html
+++ b/index.html
@@ -7,186 +7,208 @@
   <link rel="stylesheet" href="main.scss" />
 </head>
 <body>
+
   <main class="people">
-    <article class="person">
-      <section class="photo">
-        <img
-          class="photo__img"
-          src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Mayweather.jpg"
-          alt="Floyd Mayweather"
-        >
-        <span class="photo__rank">1</span>
-      </section>
-      <section class="details">
-        <a class="name">Floyd Mayweather</a>
-        <section class="extra">
-          <span class="sport">Boxing</span>
-          <span class="pay">285</span>
-        </section>
-      </section>
-    </article>
+    <div class="people__item">
+      <article class="person">
+        <div class="person__photo">
+          <img
+               class="person__image"
+               src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Mayweather.jpg"
+               alt="Floyd Mayweather"
+               >
+          <span class="person__rank">1</span>
+        </div>
+        <div class="person__details">
+          <a class="person__name" href="#">Floyd Mayweather</a>
+          <div class="person__extra">
+            <span class="person__sport">Boxing <br>1<br>2<br>3</span>
+            <span class="person__pay">111</span>
+          </div>
+        </div>
+      </article>
+    </div>
 
-    <article class="person">
-      <section class="photo">
-        <img
-          class="photo__img"
-          src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Messi.jpg"
-          alt="Lionel Messi"
-        >
-        <span class="photo__rank">2</span>
-      </section>
-      <section class="details">
-        <a class="name">Lionel Messi</a>
-        <section class="extra">
-          <span class="sport">Soccer</span>
-          <span class="pay">111</span>
-        </section>
-      </section>
-    </article>
+    <div class="people__item">
+      <article class="person">
+        <div class="person__photo">
+          <img
+               class="person__image"
+               src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Messi.jpg"
+               alt="Lionel Messi"
+               >
+          <span class="person__rank">2</span>
+        </div>
+        <div class="person__details">
+          <a class="person__name" href="#">Lionel Messi</a>
+          <div class="person__extra">
+            <span class="person__sport">Soccer</span>
+            <span class="person__pay">285</span>
+          </div>
+        </div>
+      </article>
+    </div>
 
-    <article class="person">
-      <section class="photo">
-        <img
-          class="photo__img"
-          src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Ronaldo.jpg"
-          alt="Cristiano Ronaldo"
-        >
-        <span class="photo__rank">3</span>
-      </section>
-      <section class="details">
-        <a class="name">Cristiano Ronaldo</a>
-        <section class="extra">
-          <span class="sport">Soccer</span>
-          <span class="pay">108</span>
-        </section>
-      </section>
-    </article>
+    <div class="people__item">
+      <article class="person">
+        <div class="person__photo">
+          <img
+               class="person__image"
+               src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Ronaldo.jpg"
+               alt="Cristiano Ronaldo"
+               >
+          <span class="person__rank">3</span>
+        </div>
+        <div class="person__details">
+          <a class="person__name" href="#">Cristiano Ronaldo</a>
+          <div class="person__extra">
+            <span class="person__sport">Soccer</span>
+            <span class="person__pay">108</span>
+          </div>
+        </div>
+      </article>
+    </div>
 
-    <article class="person">
-      <section class="photo">
-        <img
-          class="photo__img"
-          src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/McGregor.jpg"
-          alt="Conor McGregor"
-        >
-        <span class="photo__rank">4</span>
-      </section>
-      <section class="details">
-        <a class="name">Conor McGregor</a>
-        <section class="extra">
-          <span class="sport">Mixed Martial Arts</span>
-          <span class="pay">99</span>
-        </section>
-      </section>
-    </article>
+    <div class="people__item">
+      <article class="person">
+        <div class="person__photo">
+          <img
+               class="person__image"
+               src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/McGregor.jpg"
+               alt="Conor McGregor"
+               >
+          <span class="person__rank">4</span>
+        </div>
+        <div class="person__details">
+          <a class="person__name" href="#">Conor McGregor</a>
+          <div class="person__extra">
+            <span class="person__sport">Mixed Martial Arts</span>
+            <span class="person__pay">99</span>
+          </div>
+        </div>
+      </article>
+    </div>
 
-    <article class="person">
-      <section class="photo">
-        <img
-          class="photo__img"
-          src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Neymar.jpg"
-          alt="Neymar"
-        >
-        <span class="photo__rank">5</span>
-      </section>
-      <section class="details">
-        <a class="name">Neymar</a>
-        <section class="extra">
-          <span class="sport">Soccer</span>
-          <span class="pay">90</span>
-        </section>
-      </section>
-    </article>
+    <div class="people__item">
+      <article class="person">
+        <div class="person__photo">
+          <img
+               class="person__image"
+               src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Neymar.jpg"
+               alt="Neymar"
+               >
+          <span class="person__rank">5</span>
+        </div>
+        <div class="person__details">
+          <a class="person__name" href="#">Neymar</a>
+          <div class="person__extra">
+            <span class="person__sport">Soccer</span>
+            <span class="person__pay">90</span>
+          </div>
+        </div>
+      </article>
+    </div>
+    
+    <div class="people__item">
+      <article class="person">
+        <div class="person__photo">
+          <img
+               class="person__image"
+               src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/James.jpg"
+               alt="LeBron James"
+               >
+          <span class="person__rank">6</span>
+        </div>
+        <div class="person__details">
+          <a class="person__name" href="#">LeBron James</a>
+          <div class="person__extra">
+            <span class="person__sport">Basketball</span>
+            <span class="person__pay">85.5</span>
+          </div>
+        </div>
+      </article>
+    </div>
 
-    <article class="person">
-      <section class="photo">
-        <img
-          class="photo__img"
-          src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/James.jpg"
-          alt="LeBron James"
-        >
-        <span class="photo__rank">6</span>
-      </section>
-      <section class="details">
-        <a class="name">LeBron James</a>
-        <section class="extra">
-          <span class="sport">Basketball</span>
-          <span class="pay">85.5</span>
-        </section>
-      </section>
-    </article>
+    <div class="people__item">
+      <article class="person">
+        <div class="person__photo">
+          <img
+               class="person__image"
+               src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Federer.jpg"
+               alt="Roger Federer"
+               >
+          <span class="person__rank">7</span>
+        </div>
+        <div class="person__details">
+          <a class="person__name" href="#">Roger Federer</a>
+          <div class="person__extra">
+            <span class="person__sport">Tennis</span>
+            <span class="person__pay">77.2</span>
+          </div>
+        </div>
+      </article>
+    </div>
 
-    <article class="person">
-      <section class="photo">
-        <img
-          class="photo__img"
-          src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Federer.jpg"
-          alt="Roger Federer"
-        >
-        <span class="photo__rank">7</span>
-      </section>
-      <section class="details">
-        <a class="name">Roger Federer</a>
-        <section class="extra">
-          <span class="sport">Tennis</span>
-          <span class="pay">77.2</span>
-        </section>
-      </section>
-    </article>
+    <div class="people__item">
+      <article class="person">
+        <div class="person__photo">
+          <img
+               class="person__image"
+               src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Curry.jpg"
+               alt="Stephen Curry"
+               >
+          <span class="person__rank">8</span>
+        </div>
+        <div class="person__details">
+          <a class="person__name" href="#">Stephen Curry</a>
+          <div class="person__extra">
+            <span class="person__sport">Basketball</span>
+            <span class="person__pay">76.9</span>
+          </div>
+        </div>
+      </article>
+    </div>
 
-    <article class="person">
-      <section class="photo">
-        <img
-          class="photo__img"
-          src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Curry.jpg"
-          alt="Stephen Curry"
-        >
-        <span class="photo__rank">8</span>
-      </section>
-      <section class="details">
-        <a class="name">Stephen Curry</a>
-        <section class="extra">
-          <span class="sport">Basketball</span>
-          <span class="pay">76.9</span>
-        </section>
-      </section>
-    </article>
+    <div class="people__item">
+      <article class="person">
+        <div class="person__photo">
+          <img
+               class="person__image"
+               src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Ryan.jpg"
+               alt="Matt Ryan"
+               >
+          <span class="person__rank">9</span>
+        </div>
+        <div class="person__details">
+          <a class="person__name" href="#">Matt Ryan</a>
+          <div class="person__extra">
+            <span class="person__sport">Football</span>
+            <span class="person__pay">67.3</span>
+          </div>
+        </div>
+      </article>
+    </div>
 
-    <article class="person">
-      <section class="photo">
-        <img
-          class="photo__img"
-          src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Ryan.jpg"
-          alt="Matt Ryan"
-        >
-        <span class="photo__rank">9</span>
-      </section>
-      <section class="details">
-        <a class="name">Matt Ryan</a>
-        <section class="extra">
-          <span class="sport">Football</span>
-          <span class="pay">67.3</span>
-        </section>
-      </section>
-    </article>
-
-    <article class="person">
-      <section class="photo">
-        <img
-          class="photo__img"
-          src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Stafford.jpg"
-          alt="Matthew Stafford"
-        >
-        <span class="photo__rank">10</span>
-      </section>
-      <section class="details">
-        <a class="name">Matthew Stafford</a>
-        <section class="extra">
-          <span class="sport">Football</span>
-          <span class="pay">59.5</span>
-        </section>
-      </section>
-    </article>
+    <div class="people__item">
+      <article class="person">
+        <div class="person__photo">
+          <img
+               class="person__image"
+               src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Stafford.jpg"
+               alt="Matthew Stafford"
+               >
+          <span class="person__rank">10</span>
+        </div>
+        <div class="person__details">
+          <a class="person__name" href="#">Matthew Stafford</a>
+          <div class="person__extra">
+            <span class="person__sport">Football</span>
+            <span class="person__pay">59.5</span>
+          </div>
+        </div>
+      </article>
+    </div>
   </main>
+
 </body>
 </html>
